.metadata/.plugins/org.eclipse.cdt.ui/12_PWM.build.log
16:44:57 **** Incremental Build of configuration Debug for project 12_PWM ****
make -j12 all 
arm-none-eabi-gcc "../Src/pwm.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DSTM32L4 -DSTM32 -DSTM32L476RGTx -DSTM32L476xx -c -I../Inc -I/home/daniel/Documents/STM32BareaMetalCourse/chip_headers/CMSIS/Include -I/home/daniel/Documents/STM32BareaMetalCourse/chip_headers/CMSIS/Device/ST/STM32L4xx/Include -I/home/cruz/Documents/chip_headers/CMSIS/Include -I/home/cruz/Documents/chip_headers/CMSIS/Device/ST/STM32L4xx/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/pwm.d" -MT"Src/pwm.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Src/pwm.o"
../Src/pwm.c: In function 'pwm':
../Src/pwm.c:37:7: error: 'RCC_TypeDef' has no member named 'APB1ENR'; did you mean 'AHB1ENR'?
   37 |  RCC->APB1ENR |= TIM2EN;
      |       ^~~~~~~
      |       AHB1ENR
make: *** [Src/subdir.mk:37: Src/pwm.o] Error 1
"make -j12 all" terminated with exit code 2. Build might be incomplete.

16:44:57 Build Failed. 2 errors, 0 warnings. (took 249ms)

